# hardware-accelerators

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile.demo  README.md  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  q2_roadmap.md  requirements.txt  resources.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
analysis_scripts/: power_analysis.tcl  run_power_analysis.ps1  run_power_analysis.sh  synth_accelerator.tcl  synth_systolic.tcl
app/: globals.css  page.tsx
demo/: Dockerfile  app.py  newapp.py  readme.md  requirements.txt
examples/: export_hardware.py
figures/: lmul_vs_multiplier_improvements.csv
gemm/: accumulators.py  fp8_adder.py  fp8_adder.v  mac.py  matrix_tpu.py  mm_array.py
hardware_accelerators/: __init__.py  app.py  bad_example.py  compile.py  dtypes.py  dtypes_combined.py  run_lmul_eval.py
justin/: gpu_matmul.ipynb  mult_circuit.ipynb  scratch_mult.ipynb
kai/: float8.py  fp8_Lmul.ipynb  l_mul.py  messy.ipynb  pyrtl_lmul.ipynb  utils.py
lukas/: ipGeneratorProject.xpr
models/: mlp_mnist.onnx  mlp_mnist.pth  mlp_mnist_bf16.pth  mlp_mnist_fp16.pth  mlp_mnist_fp32.pth
notebooks/: Accumulator Buffer.ipynb  accumulators.ipynb  activations.ipynb  adder_testing.ipynb  analysis.ipynb  compile.ipynb  float_conversion_demo.ipynb  lmul.ipynb  matrix_engine.ipynb  matrix_utils_demo.ipynb  memory_buffers.ipynb  mnist_accuracy_visualization.ipynb  modelsim.ipynb  neural_net.ipynb  onnx_testing.ipynb  quantization_demo.ipynb  readme.md  systolic_array.ipynb  test.ipynb  (+3 more)
(+761 files in other folders)
