[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware_accelerators"
version = "0.1.0"
description = "Internal package for hardware accelerator implementations"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--import-mode=importlib"]
pythonpath = ["."]

[tool.coverage.run]
source = ["hardware_accelerators"]
omit = ["tests/*"]

[tool.black]
verbose = true
target-version = ['py312']

[tool.isort]
profile = "black"
